# semver-bump

./: .justfile  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  test.yml
src/: main.rs
